# invenio-notify

./: .gitignore  .mcp.json  CLAUDE.md  MANIFEST.in  README.md  debug_record.py  pyproject.toml  requirements.txt  ruff.toml  run-tests.sh
.claude/commands/: create-pr.md  fill-upload-form.md
.github/: PULL_REQUEST_TEMPLATE.md
docs/: features.md
docs/diagram/: db.mmd  notify_workflow.mmd
docs/examples/: review_1.json
docs_sphinx/: conf.py  endpoints.rst  how_to.rst  how_to_run.rst  inbox_api.rst  index.rst  links.rst
docs_sphinx/_static/: _links.rst
docs_sphinx/_static/css/: custom.css
docs_sphinx/concepts/: db.rst  index.rst  notify_workflow.rst  overall.rst
invenio_notify/: blueprints.py  cli.py  config.py  constants.py  errors.py  ext.py  feature_toggle.py  jobs.py  permissions.py  proxies.py  scopes.py  tasks.py  views.py  webpack.py
invenio_notify/alembic/: 1740578602_add_process_date.py  1741180325_create_table_endorsementmetadata.py  1742389623_create_reviewer_map.py  1743588544_create_reviewer.py  1747215441_init_notify.py  1747215442_remove_endorsement_user_id.py  1751019450_add_endorsement_models.py  1751030000_add_noti_id_to_endorsement_request.py  1751970206_init_notify.py  cc90a76e9749_create_notify_inbox_table.py
invenio_notify/assets/semantic-ui/js/invenio_notify/: package-lock.json
invenio_notify/assets/semantic-ui/js/invenio_notify/administration/reviewer/search/: ReviewerSearchActions.js  SearchResultItemLayout.js  index.js
invenio_notify/assets/semantic-ui/js/invenio_notify/administration/reviewer/search/components/: MemberAction.js  MemberAction.test.js  TmpActionA.js
invenio_notify/assets/semantic-ui/js/invenio_notify/src/administration/actor/search/: ActorSearchActions.js  SearchResultItemLayout.js
invenio_notify/assets/semantic-ui/js/invenio_notify/src/administration/notification/: index.js
invenio_notify/assets/semantic-ui/js/invenio_notify/src/administration/notification/search/: SearchResultItemLayout.js
invenio_notify/assets/semantic-ui/js/invenio_notify/src/administration/reviewer/: index.js
invenio_notify/assets/semantic-ui/js/invenio_notify/src/administration/reviewer/search/: PgUserSearchLayout.js  ReviewerSearchActions.js  (+1 more)
invenio_notify/assets/semantic-ui/js/invenio_notify/src/api/: MemberApiClient.js
invenio_notify/dummy_actor/: dummy_pci_app.py
invenio_notify/dummy_reviewer/: __init__.py  dummy_pci_app.py
invenio_notify/notifications/: builders.py
invenio_notify/records/: mixins.py  models.py  records.py
invenio_notify/records/mappings/os-v1/: __init__.py
invenio_notify/records/mappings/os-v2/: __init__.py
invenio_notify/records/mappings/os-v2/endorsement/: endorsement-v1.0.0.json
invenio_notify/records/systemfields/: endorsement_list_field.py  pidid.py
invenio_notify/resources/: __init__.py  basic_db_resource.py  config.py  endorsement_request_resource.py  errors.py  inbox_api_resource.py  notify_inbox_resource.py  resource.py  reviewer_resource.py
invenio_notify/resources/resource/: __init__.py  actor_admin_resource.py  basic_db_resource.py  endorsement_admin_resource.py  endorsement_request_admin_resource.py  endorsement_request_resource.py  inbox_admin_resource.py  inbox_api_resource.py  reviewer_admin_resource.py
invenio_notify/services/: __init__.py  components.py  conf.py  config.py  config_utils.py  links.py  policies.py  results.py  schemas.py  service.py
invenio_notify/services/service/: __init__.py  actor_map_service.py  actor_service.py  base_service.py  endorsement_reply_service.py  endorsement_request_service.py  endorsement_service.py  inbox_service.py  reviewer_map_service.py  reviewer_service.py
invenio_notify/templates/semantic-ui/invenio_notifications/: endorsement-reply.jinja  endorsement-update.jinja  new-endorsement.jinja  tmp-noti.jinja
invenio_notify/templates/semantic-ui/invenio_notify/: pg2.html
invenio_notify/templates/semantic-ui/invenio_notify/administration/: actor_search.html  notification_search.html  reviewer_search.html
invenio_notify/utils/: __init__.py  actor_utils.py  debug_utils.py  endorsement_request_utils.py  notify_response.py  notify_utils.py  record_utils.py  reviewer_utils.py  user_utils.py
invenio_notify/views/: __init__.py  api_views.py  endorsement_admin_views.py  endorsement_request_admin_views.py  inbox_admin_views.py  mixins.py  reviewer_map_views.py  reviewer_views.py
invenio_notify/views/admin/: actor_views.py  endorsement_request_views.py  endorsement_views.py  inbox_views.py  reviewer_views.py
invenio_notify_test/: conftest.py  inbox_fixture.py  reviewer_fixture.py  reviewer_map_fixture.py  test_actor.py  test_actor_map.py  test_basic_db_service.py  test_coar_notify_factory.py  test_dummy_pci_app.py  test_endorsement.py  test_endorsement_indexing.py  test_endorsement_reply.py  test_endorsement_request.py  test_endorsement_request_resource.py  test_endorsement_request_utils.py  test_get_workflow_status.py  test_inbox_api.py  test_inbox_test_data_builder.py  test_notify_inbox.py  test_reviewer.py  test_reviewer_map.py  test_tasks.py  test_views.py  utils.py
invenio_notify_test/builders/: inbox_test_data_builder.py
invenio_notify_test/fixtures/: actor_fixture.py  actor_map_fixture.py  endorsement_fixture.py  endorsement_reply_fixture.py  endorsement_request_fixture.py  endorsement_request_payload.py  inbox_fixture.py  inbox_payload.py  record_fixture.py  reviewer_fixture.py  reviewer_map_fixture.py  user_fixture.py
tests/: conftest.py  test_actor.py  test_actor_map.py  test_basic_db_service.py  test_coar_notify_factory.py  test_dummy_pci_app.py  test_endorsement.py  test_endorsement_indexing.py  test_endorsement_reply.py  test_endorsement_request.py  test_endorsement_request_resource.py  test_endorsement_request_utils.py  test_get_record_id.py  test_inbox_api.py  test_inbox_test_data_builder.py  test_notify_inbox.py  test_tasks.py  test_unittest.py
tests/fixtures/: actor_map_fixture.py  endorsement_reply_fixture.py  endorsement_request_fixture.py  endorsement_request_payload.py  inbox_fixture.py  inbox_payload.py
(+11 files in other folders)
