[project]
name = "invenio-notify"
version = "0.0.1"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest~=7.1",
    "pytest-invenio~=3.0",
    "pytest-black~=0.6.0",
]

[[project.authors]]
name = "someone"

[build-system]
requires = ["setuptools", ]
build-backend = "setuptools.build_meta"

[project.scripts]

[project.entry-points."invenio_access.actions"]
coarnotify_action = "invenio_notify.permissions:coarnotify_action"

[project.entry-points."invenio_administration.views"]
notify_inbox_list = "invenio_notify.views.inbox_admin_views:NotifyInboxListView"
notify_inbox_detail = "invenio_notify.views.inbox_admin_views:NotifyInboxDetailView"
reviewer_map_list = "invenio_notify.views.reviewer_map_views:ReviewerMapListView"
reviewer_map_detail = "invenio_notify.views.reviewer_map_views:ReviewerMapDetailView"
reviewer_map_create = "invenio_notify.views.reviewer_map_views:ReviewerMapCreateView"
reviewer_map_edit = "invenio_notify.views.reviewer_map_views:ReviewerMapEditView"

[project.entry-points."invenio_base.api_apps"]
invenio_notify = "invenio_notify.ext:InvenioNotify"

[project.entry-points."invenio_base.api_blueprints"]
notify_inbox_resource = "invenio_notify.blueprints:create_notify_inbox_resource_api_bp"
reviewer_map_resource = "invenio_notify.blueprints:create_reviewer_map_resource_api_bp"
invenio_notify_rest = "invenio_notify.blueprints:rest_blueprint"

[project.entry-points."invenio_base.apps"]
invenio_notify = "invenio_notify.ext:InvenioNotify"

[project.entry-points."invenio_db.alembic"]
invenio_notify = "invenio_notify:alembic"

[project.entry-points."invenio_db.models"]
invenio_notify = "invenio_notify.records.models"

[project.entry-points."invenio_oauth2server.scopes"]
oauth_noti = "invenio_notify.scopes:inbox_scope"


[tool.setuptools.packages.find]


[project.entry-points."invenio_search.mappings"]
endorsement = "invenio_notify.records.mappings"


[project.entry-points."invenio_jobs.jobs"]
process_notify_inbox = "invenio_notify.jobs:ProcessNotifyInboxJob"
