[project]
name = "invenio-notify"
version = "0.0.1"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest~=7.1",
    "pytest-invenio~=3.0",
    "pytest-black~=0.6.0",
]

[[project.authors]]
name = "someone"

[build-system]
requires = ["setuptools", ]
build-backend = "setuptools.build_meta"

[project.scripts]

[project.entry-points."invenio_access.actions"]
coarnotify_action = "invenio_notify.permissions:coarnotify_action"

[project.entry-points."invenio_administration.views"]
notify_inbox_list = "invenio_notify.views.admin.inbox_views:NotifyInboxListView"
notify_inbox_detail = "invenio_notify.views.admin.inbox_views:NotifyInboxDetailView"
reviewer_list = "invenio_notify.views.admin.reviewer_views:ReviewerListView"
reviewer_detail = "invenio_notify.views.admin.reviewer_views:ReviewerDetailView"
reviewer_create = "invenio_notify.views.admin.reviewer_views:ReviewerCreateView"
reviewer_edit = "invenio_notify.views.admin.reviewer_views:ReviewerEditView"
endorsement_request_list = "invenio_notify.views.admin.endorsement_request_views:EndorsementRequestListView"
endorsement_request_detail = "invenio_notify.views.admin.endorsement_request_views:EndorsementRequestDetailView"
endorsement_list = "invenio_notify.views.admin.endorsement_views:EndorsementListView"
endorsement_detail = "invenio_notify.views.admin.endorsement_views:EndorsementDetailView"

[project.entry-points."invenio_base.api_apps"]
invenio_notify = "invenio_notify.ext:InvenioNotify"

[project.entry-points."invenio_base.api_blueprints"]
inbox_admin_resource = "invenio_notify.blueprints:create_inbox_admin_resource_api_bp"
reviewer_admin_resource = "invenio_notify.blueprints:create_reviewer_admin_resource_api_bp"
inbox_api_resource = "invenio_notify.blueprints:create_inbox_api_resource_bp"
endorsement_request = "invenio_notify.blueprints:create_endorsement_request_resource_api_bp"
endorsement_request_admin_resource = "invenio_notify.blueprints:create_endorsement_request_admin_resource_api_bp"
endorsement_admin_resource = "invenio_notify.blueprints:create_endorsement_admin_resource_api_bp"

[project.entry-points."invenio_base.apps"]
invenio_notify = "invenio_notify.ext:InvenioNotify"

[project.entry-points."invenio_db.alembic"]
invenio_notify = "invenio_notify:alembic"

[project.entry-points."invenio_db.models"]
invenio_notify = "invenio_notify.records.models"

[project.entry-points."invenio_oauth2server.scopes"]
oauth_noti = "invenio_notify.scopes:inbox_scope"

[project.entry-points."invenio_assets.webpack"]
invenio_notify = "invenio_notify.webpack:notify"

[project.entry-points."invenio_jobs.jobs"]
process_notify_inbox = "invenio_notify.jobs:ProcessNotifyInboxJob"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["build*", "dist*", "*.egg-info*"]





